--- a/package.json
+++ b/package.json
@@ -11,8 +11,22 @@
   },
   "dependencies": {
     "@wordpress/api-fetch": "^7.31.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "@wordpress/autop": "^4.31.0",
+    "@wordpress/base-styles": "^6.7.0",
+    "@wordpress/blob": "^4.31.0",
+    "@wordpress/block-directory": "^5.31.0",
+    "@wordpress/block-editor": "^15.4.0",
+    "@wordpress/block-library": "^9.31.0",
+    "@wordpress/block-serialization-default-parser": "^5.31.0",
+    "@wordpress/block-serialization-spec-parser": "^5.31.0",
+    "@wordpress/blocks": "^15.4.0",
+    "@wordpress/commands": "^1.31.0",
+    "@wordpress/components": "^30.4.0",
+    "@wordpress/editor": "^14.31.0",
+    "@wordpress/private-apis": "^1.31.0",
+    "@wordpress/scripts": "^30.24.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
