--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@wordpress/components": "^30.4.0",
     "@wordpress/compose": "^7.31.0",
     "@wordpress/editor": "^14.31.0",
+    "@wordpress/format-library": "^5.31.0",
     "@wordpress/icons": "^10.31.0",
     "@wordpress/private-apis": "^1.31.0",
     "@wordpress/scripts": "^30.24.0",
